--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,7 @@
       <ul class="menu-links" [ngClass]="{'menu-links-dark': darkModeActive}">
         <li class="menu-link" routerLink="/">Home</li>
         <li class="menu-link" routerLink="/add">Add City</li>
+        <li class="menu-link" (click)="logout()">Logout</li>
 
       </ul>
     </section>
