--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,7 @@
-
+@mixin ipad { @media (max-width: 959px) {
+    @content;
+    }
+}
 
 /* Slide Menu */
 
@@ -164,7 +167,7 @@
 /* Header */
 
 .root-container{
-    width: 100vw;
+    width: 100%;
     // height: 100vh;
     height: 100%;
     display: grid;
@@ -184,6 +187,13 @@
         transition: background-color 500ms linear;
         animation: 1s ease-in-out 0ms 1 fadein;
         background-color: white;
+        @include ipad{
+            text-align: center;
+            grid-template-columns: 1fr;
+            padding: 1rem 0;
+            min-height: 8rem;
+            width: 100vw;
+        }
 
         .mode_toggle__container{
             .toggle-button_container{
@@ -235,6 +245,12 @@
             grid-template-rows: 1fr;
             grid-template-columns: 1fr 1fr;
             max-width: 5rem;
+            @include ipad{
+                justify-self: start;
+                max-width: none;
+                grid-template-columns: 0 5fr;
+                width: 100%;
+            }
             .hamburger__icon{
                 position: relative;
                 z-index: 35;
@@ -246,6 +262,9 @@
             .logo_icon{
                 height: 2rem;
                 margin-left: 1rem;
+                @include ipad{
+                    margin: 0 auto;
+                }
             }
             .logo__text-dark {
                 fill: #ffff;
