--- a/src/app/pages/details/details.component.scss
+++ b/src/app/pages/details/details.component.scss
@@ -13,13 +13,14 @@
 
 .details-page__wrapper{
     background: linear-gradient(to top, #86DBFF 0%, #e0c3fc 100%);
-    height: 100%;
-    width: 100%;
+    min-height: 100vh;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
     overflow: hidden;
+    object-fit: cover;
     @include small {
         flex-flow: column;
     }
@@ -51,6 +52,7 @@
 
         @include medium {
             top: 1rem;
+            margin-top: 1rem;
         }
         @include small {
             position: static;
@@ -60,19 +62,16 @@
 
     .main-weather_dark-card{
         background-color: white;
-        height: 85%;
+        height: fit-content;
         width: 70%;
         border-radius: 1rem;
         position: relative;
         z-index: 3;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 0.5fr 1.25fr;
         justify-items: center;
         animation: scaleup 1s ease-out 300ms, fadein 1.25s ease-out 300ms forwards;
 
         @include large {
-            height: 80%;
+            // height: 80%;
             width: 75%;
         }
         @include medium {
@@ -84,11 +83,15 @@
             max-height: 20rem;
             position: relative;
             z-index: 1;
+            overflow: hidden;
 
             .city-illustration{
                 width: 100%;
                 border-radius: 1rem 1rem 0 0;
                 position: relative;
+                height: 500px;
+                object-fit: cover;
+                display: block;
             }
 
             .header-content_wrapper{
@@ -199,88 +202,89 @@
                 }
             }
 
-            .body-content-wrap{
-                display: grid;
-                grid-template-columns: 1fr 1.75fr;
-                grid-template-rows: 1fr;
-                justify-items: center;
-                box-sizing: border-box;
-                grid-column-gap: 1rem;
-                width: 100%;
-                padding: 2rem;
-                @include medium {
-                    grid-template-columns: 1fr;
-                }
+            
+        }
+        .body-content-wrap{
+            display: grid;
+            grid-template-columns: 1fr 1.75fr;
+            grid-template-rows: 1fr;
+            justify-items: center;
+            box-sizing: border-box;
+            grid-column-gap: 1rem;
+            width: 100%;
+            padding: 2rem;
+            @include medium {
+                grid-template-columns: 1fr;
+            }
 
-                .twitter-feed_container{
-                    margin-top: 1rem;
+            .twitter-feed_container{
+                margin-top: 1rem;
+                width: 100%;
+
+                .twitter-feed-header{
+                    display: grid;
+                    grid-template-rows: 2rem;
+                    grid-template-columns: 0.5fr 1.5fr 1fr;
+                    align-items: center;
+                    justify-items: center;
                     width: 100%;
 
-                    .twitter-feed-header{
-                        display: grid;
-                        grid-template-rows: 2rem;
-                        grid-template-columns: 0.5fr 1.5fr 1fr;
-                        align-items: center;
-                        justify-items: center;
-                        width: 100%;
-
-                        .twitter-icon{
-                            width: 1.5rem;
-                        }
-                        .twitter-feed-text{
-                            color: #0c1066;
-                            font-size: 1.25rem;
-                        }
-                        .twitter-feed-tag{
-                            font-size: 0.85rem;
-                            color: #5f84fb;
-                            letter-spacing: 0.1rem;
-                            text-transform: uppercase;
-                        }
+                    .twitter-icon{
+                        width: 1.5rem;
+                    }
+                    .twitter-feed-text{
+                        color: #0c1066;
+                        font-size: 1.25rem;
+                    }
+                    .twitter-feed-tag{
+                        font-size: 0.85rem;
+                        color: #5f84fb;
+                        letter-spacing: 0.1rem;
+                        text-transform: uppercase;
                     }
                 }
+            }
 
-                .forecast-container{
+            .forecast-container{
+                display: flex;
+                flex-flow: row;
+                align-items: center;
+                align-self: center;
+                justify-self: center;
+                flex-wrap: wrap;
+                .day-weather-container{
                     display: flex;
-                    flex-flow: row;
+                    flex-flow: column;
+                    margin: 2rem 1.5rem;
+                    justify-content: center;
                     align-items: center;
-                    align-self: center;
-                    justify-self: center;
-                    
-                    .day-weather-container{
-                        display: flex;
-                        flex-flow: column;
-                        margin: 2rem 1.5rem;
-                        justify-content: center;
-                        align-items: center;
 
-                        .day-name-text{
-                            font-size: 1.5rem;
-                            color: #39437a;
-                            font-weight: bold;
-                            text-transform: uppercase;
-                            margin-bottom: 0.5rem;
-                        }
+                    .day-name-text{
+                        font-size: 1.5rem;
+                        color: #39437a;
+                        font-weight: bold;
+                        text-transform: uppercase;
+                        margin-bottom: 0.5rem;
+                    }
 
-                        .forecast-condition-icon{
-                            height: 4rem;
-                        }
+                    .forecast-condition-icon{
+                        height: 4rem;
+                    }
 
-                        .day-temp-text{
-                            font-size: 1.85rem;
-                            color: #0c1066;
-                            letter-spacing: 0.25rem;
-                            margin: 0.75rem 0;
-                            text-align: center;
-                            padding-left: 0.35rem;
-                        }
+                    .day-temp-text{
+                        font-size: 1.85rem;
+                        color: #0c1066;
+                        letter-spacing: 0.25rem;
+                        margin: 0.75rem 0;
+                        text-align: center;
+                        padding-left: 0.35rem;
+                    }
 
-                        .day-state-text{
-                            font-size: 0.65rem;
-                            text-transform: uppercase;
-                            letter-spacing: 0.2rem;
-                            color: #2B244D;
-                        }
+                    .day-state-text{
+                        font-size: 0.65rem;
+                        text-transform: uppercase;
+                        letter-spacing: 0.2rem;
+                        color: #2B244D;
                     }
                 }
             }
