--- a/src/app/pages/details/details.component.scss
+++ b/src/app/pages/details/details.component.scss
@@ -14,7 +14,7 @@
 .details-page__wrapper{
     background: linear-gradient(to top, #86DBFF 0%, #e0c3fc 100%);
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
